Modified by Source

--- a/v2/watchlist.html
+++ b/v2/watchlist.html
@@ -94,7 +94,7 @@
 <script>
   // ======== SET THIS IN STEP 4 ========
   // Example: "https://your-worker-name.your-subdomain.workers.dev"
-  const API_BASE = "REPLACE_WITH_YOUR_CLOUDFLARE_WORKER_URL";
+  const API_BASE = "https://watchlist-movieglu-proxy.farwalker3.workers.dev";
 
   const PREFERRED_THEATER_HINTS = [{ nameIncludes: "Smitty", cityIncludes: "Sanford", weight: 50 }];
   const PREMIUM_FORMATS = new Set(["3D","IMAX","IMAX3D","3DIMAX"]);
