Modified by Source

--- a/projects.html
+++ b/projects.html
@@ -38,13 +38,15 @@
           <h2>Kodair</h2>
           <p><a href="https://kodair.us">https://kodair.us</a>• Kodair is a fun website I maintain, which contains a wide collection of web apps. It's your place for everything!</p>
         </li>
-        <li>
-          <h2>Nouriscan</h2>
-          <p><a href="https://nouriscan.streamlit.app">https://nouriscan.streamlit.app</a>• Nouriscan is an AI and database powered food scanning application that I built for a college project.</p>
-        </li>
+        <!--
+          <li>
+            <h2>Nouriscan</h2>
+            <p><a href="https://nouriscan.streamlit.app">https://nouriscan.streamlit.app</a>• Nouriscan is an AI and database powered food scanning application that I built for a college project.</p>
+          </li>
+        -->
         <li>
           <h2>Maine Cardworks</h2>
-          <p><a href="https://mainecardworks.kodair.us">https://mainecardworks.kodair.us</a>• Maine Cardworks is an e-commerce store for selling handmade cards made in Maine.</p>
+          <p><a href="https://mainecardworks.com">https://mainecardworks.com</a>• Maine Cardworks is an e-commerce store for selling handmade cards made in Maine.</p>
         </li>
       </ul>
     </div>
